--- a/.env.EXAMPLE
+++ b/.env.EXAMPLE
@@ -2,3 +2,12 @@ DB_NAME='studdy_db'
 DB_USER=''
 DB_PW=''
 DB_SECRET=
+
+
+<header class="hero">
+    <h1 class="app-title"><a href="/dashboard">Your Dashboard</a></h1>
+    <widgetbot server="1078388531136823316" channel="355719584830980096" width="800" height="600">
+    </widgetbot>
+    <script src="https://cdn.jsdelivr.net/npm/@widgetbot/html-embed"></script>
+    </div>
+</header>
